# chain-indexer

./: .env  .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  TODO  indexing.schema  local-settings.toml  nohup.out  rustfmt.toml  todo
backend/: Cargo.toml  README.md  openapi.json  openapi.yaml  package.json
backend/benches/: btc_processor_benchmark.rs  indexer_benchmark.rs
backend/src/: api.rs  block_read_service.rs  block_write_service.rs  cli.rs  codec.rs  codec_block.rs  codec_tx.rs  db_options.rs  http_server.rs  indexer.rs  lib.rs  main.rs  model.rs  persistence.rs  rocks_db_batch.rs  settings.rs  syncer.rs
backend/src/eutxo/: eutxo_block_monitor.rs  eutxo_codec_utxo.rs  eutxo_executor.rs  eutxo_families.rs  eutxo_model.rs  eutxo_schema.rs  eutxo_storage.rs  eutxo_tx_read_service.rs  eutxo_tx_write_service.rs  mod.rs
backend/src/eutxo/btc/: btc_block_processor.rs  btc_block_provider.rs  btc_client.rs  btc_io_processor.rs  mod.rs
backend/src/eutxo/cardano/: cardano_block_processor.rs  cardano_block_provider.rs  cardano_client.rs  cardano_io_processor.rs
backend/src/eutxo/ergo/: ergo_block_processor.rs  ergo_block_provider.rs  ergo_client.rs  ergo_io_processor.rs  mod.rs
backend/src/http/: definitions.yaml
backend/src/http/paths/: blocks.rs
backend/src/http/paths/blocks/{hash_or_height_or_latest}/: path.yaml
backend/tests/: block_write_service_tests.rs
benches/: btc_processor_benchmark.rs  eutxo_indexer_benchmark.rs  indexer_benchmark.rs  processor_benchmark.rs
config/: schema.yaml  settings.toml
model/: Cargo.toml
model/src/: eutxo_model.rs  lib.rs
src/: api.rs  block_monitor.rs  block_read_service.rs  block_service.rs  block_write_service.rs  cli.rs  codec.rs  codec_block.rs  codec_tx.rs  combine.rs  config.rs  db_index_manager.rs  db_options.rs  experiment.rs  fifo_cache.rs  indexer.rs  lib.rs  logger.rs  main.rs  model.rs  monitor.rs  rocks_db_batch.rs  rocksdb_wrapper.rs  scheduler.rs  settings.rs  signal_handler.rs  storage.rs  syncer.rs
src/btc/: btc_client.rs  btc_input_indexer.rs  btc_processor.rs  btc_storage.rs  mod.rs
src/eutxo/: eutxo_api.rs  eutxo_batch_executor.rs  eutxo_block_monitor.rs  eutxo_codec.rs  eutxo_codec_block.rs  eutxo_codec_tx.rs  eutxo_codec_utxo.rs  eutxo_executor.rs  eutxo_families.rs  eutxo_index_manager.rs  eutxo_indexer.rs  eutxo_indexers.rs  eutxo_input_indexer.rs  eutxo_model.rs  eutxo_schema.rs  eutxo_service.rs  eutxo_storage.rs  eutxo_tx_codec.rs  eutxo_tx_read_service.rs  eutxo_tx_service.rs  eutxo_tx_write_service.rs  eutxo_utxo_codec.rs  mod.rs
src/eutxo/btc/: btc_block_processor.rs  btc_block_provider.rs  btc_chain_linker.rs  btc_client.rs  btc_config.rs  btc_io_processor.rs  btc_output_processor.rs  btc_processor.rs  mod.rs
src/eutxo/cardano/: cardano_block_processor.rs  cardano_block_provider.rs  cardano_client.rs  cardano_config.rs  cardano_io_processor.rs  cardano_output_processor.rs  cardano_processor.rs  mod.rs
src/eutxo/ergo/: ergo_block_processor.rs  ergo_block_provider.rs  ergo_client.rs  ergo_config.rs  ergo_io_processor.rs  ergo_output_processor.rs  ergo_processor.rs  mod.rs
src/http/paths/: blocks.rs
src/rocks/: mod.rs  rocks_indexer.rs  rocks_indexer_old.rs  rocks_io_indexer.rs  rocks_storage.rs
tests/: block_write_service_tests.rs
