[package]
name = "ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", default-features = false, features = [
    "multi-threaded-cf",
], rev = "6943a2d06064780a26c6ec581c3182bc8e2f6a5a" }
bitcoin = "0.32.0"
bitcoincore-rpc = "0.19.0"
bitcoin_hashes = "0.14.0"
base16 = "0.2.1"
rand = "0.8.5"
min-batch = { git = "https://github.com/pragmaxim-com/min-batch.rs" }
broadcast-sink = { git = "https://github.com/pragmaxim-com/broadcast-sink.rs" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
pin-project-lite = "0.2"
futures = "0.3.30"
chrono = "0.4.38"
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
lru = "0.12.3"
byteorder = "1.5.0"
config = "0.14.0"
toml = "0.8.14"
dotenv = "0.15.0"
hex = "0.4.3"
signal-hook = "0.3.17"
ouroboros = "0.18.4"
derive_more = "0.99.18"
proptest = "1.5.0"
ergo-lib = "0.27.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "blocking",
] }
serde_json = "1.0.122"
async-trait = "0.1.81"
pallas = "0.29.0"
num_enum = "0.7.3"
clap = { version = "4.5.15", features = ["derive"] }
lazy_static = "1.5.0"
indexmap = { version = "2.4.0", features = ["serde"] }
actix-web = "4.8.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "btc_processor_benchmark"
harness = false

[[bench]]
name = "indexer_benchmark"
harness = false
