[package]
name = "chain-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
min-batch = { git = "https://github.com/pragmaxim-com/min-batch.rs" }
futures = "0.3.30"
chrono = "0.4.38"
num_cpus = "1.16.0"
config = "0.15.11"
dotenv = "0.15.0"
hex = "0.4.3"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "blocking",
] }
async-trait = "0.1.81"
pallas = "0.32.1"
num_enum = "0.7.3"
clap = { version = "4.5.15", features = ["derive"] }
actix-web = "4.8.0"
url = "2.5.2"
env_logger = "0.11.5"
redbit = { git = "https://github.com/pragmaxim-com/redbit" }
# redbit = { path = "../../redbit/redbit", version = "0.1.0" }
redb = "2.6.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "btc_processor_benchmark"
harness = false

[[bench]]
name = "indexer_benchmark"
harness = false
