[package]
name = "chain-syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
min-batch = { git = "https://github.com/pragmaxim-com/min-batch.rs" }
futures = "0.3.30"
chrono = "0.4.38"
num_cpus = "1.16.0"
config = "0.15.11"
hex = "0.4.3"
async-trait = "0.1.81"
redbit = { git = "https://github.com/pragmaxim-com/redbit" }
redb = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
